force-app/main/default/objects/Service_Charge_Configuration__c/Service_Charge_Configuration__c.object-meta.xml
<CustomObject>
    <label>Service Charge Configuration</label>
    <nameField>
        <displayFormat>SCC-{000000}</displayFormat>
        <label>Service Charge Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Charge Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>