force-app/main/default/objects/Service_Charge_Configuration__c/fields/General_Fund_Rate_Psqft__c.field-meta.xml
<CustomField>
    <fullName>General_Fund_Rate_Psqft__c</fullName>
    <label>General Fund Rate Psqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>