force-app/main/default/objects/Service_Charge_Configuration__c/fields/Reserve_Fund_Rate_Psqft__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Fund_Rate_Psqft__c</fullName>
    <label>Reserve Fund Rate Psqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>