force-app/main/default/objects/Service_Charge_Configuration__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <label>Total Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>