force-app/main/default/objects/Service_Charge_Configuration__c/fields/Year_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Closing_Date__c</fullName>
    <formula>Year_Opening_Date__c + 365.25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Closing Date</label>
    <type>Date</type>
</CustomField>