force-app/main/default/objects/Service_Charge_Configuration__c/fields/Year_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_Opening_Date__c</fullName>
    <label>Year Opening Date</label>
    <type>Date</type>
</CustomField>